[tool.poetry]
name = "conpass"
version = "0.0.1"
description = "Continuous password spraying tool"
authors = ["pixis <romain.bentz@login-securite.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
impacket = "^0.12.0"
rich = "^13.9.2"
python-ldap = "^3.4.4"
typer = "^0.12.5"
pycryptodome = "^3.21.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.1"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
conpass = "conpass.console:app"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812",     # Conflicts with formatter
  "ISC001",     # Conflicts with formatter

  "ANN",        # Annotations
  "D",          # Docstrings
  "N",          # Naming
]